k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Must match the `google_compute_global_address` name in the infra repo (demo-gke-app-ip)
    kubernetes.io/ingress.global-static-ip-name: "demo-gke-app-ip"
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
